# music_player

./: .gitignore  CMakeLists.txt  README.md  audiometadata.cpp  audiometadata.h  audioqueuetable.cpp  audioqueuetable.h  build.nix  flake.nix  loopbutton.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  music_player.pro  playbutton.h  treewidgetwindow.cpp  treewidgetwindow.h  waveformprogressbar.cpp  waveformprogressbar.h
resources/icons/: icons.qrc
resources/styles/: darktheme.qss  styles.qrc
src/modules/dirTree/: searchbox.cpp  searchbox.h  treewidgetwindow.cpp  treewidgetwindow.h
src/modules/main/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/modules/player/: audioplayer.cpp  audioplayer.h  hoverbutton.cpp  hoverbutton.h  loopbutton.cpp  playbutton.cpp  playbutton.h  waveformprogressbar.cpp  waveformprogressbar.h
src/modules/tableQueue/: audiometadata.cpp  audiometadata.h  audioqueuetable.cpp  audioqueuetable.h
styles/: darktheme.qss
